--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShivamSingh</title>
+    <title>ShivamSingh , @sshivam__ssingh </title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -391,7 +391,7 @@ Let's connect and explore opportunities to innovate together!
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">shivamsingh@gmail.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">shivamsingh8496@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
